--- a/src/index.css
+++ b/src/index.css
@@ -81,6 +81,83 @@
     font-display: swap;
 }
 
+/* Satoshi - Light (300) */
+@font-face {
+    font-family: "Satoshi";
+    src: url("./assets/fonts/satoshi/Satoshi-Light.woff2") format("woff2");
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+
+/* Satoshi - Regular (400) */
+@font-face {
+    font-family: "Satoshi";
+    src: url("./assets/fonts/satoshi/Satoshi-Regular.woff2") format("woff2");
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+/* Satoshi - Medium (500) */
+@font-face {
+    font-family: "Satoshi";
+    src: url("./assets/fonts/satoshi/Satoshi-Medium.woff2") format("woff2");
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+
+/* Satoshi - Bold (700) */
+@font-face {
+    font-family: "Satoshi";
+    src: url("./assets/fonts/satoshi/Satoshi-Bold.woff2") format("woff2");
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+}
+
+/* Satoshi - Black (900) */
+@font-face {
+    font-family: "Satoshi";
+    src: url("./assets/fonts/satoshi/Satoshi-Black.woff2") format("woff2");
+    font-weight: 900;
+    font-style: normal;
+    font-display: swap;
+}
+
+.font-nohemi {
+    font-family: "Nohemi", ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, Arial;
+}
+.font-satoshi {
+    font-family: "Satoshi", ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, Arial;
+}
+
 :root {
     font-family: "Nohemi", ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, Arial;
 }
+
+.icon-small{
+    width: 22px;
+    height: 22px;
+}
+
+.icon-instagram {
+    mask: url('/src/assets/icons/instagram.svg') no-repeat center / contain;
+    -webkit-mask: url('/src/assets/icons/instagram.svg') no-repeat center / contain;
+}
+.icon-github {
+    mask: url('/src/assets/icons/github.svg') no-repeat center / contain;
+    -webkit-mask: url('/src/assets/icons/github.svg') no-repeat center / contain;
+}
+
+.icon-linkedin {
+    mask: url('/src/assets/icons/linkedin.svg') no-repeat center / contain;
+    -webkit-mask: url('/src/assets/icons/linkedin.svg') no-repeat center / contain;
+}
+
+.icon-mail {
+    mask: url('/src/assets/icons/envelope.svg') no-repeat center / contain;
+    -webkit-mask: url('/src/assets/icons/envelope.svg') no-repeat center / contain;
+}
+
