--- a/src/index.css
+++ b/src/index.css
@@ -161,3 +161,17 @@
     -webkit-mask: url('/src/assets/icons/envelope.svg') no-repeat center / contain;
 }
 
+:root {
+    --navbar-height: 129px;
+    --orange: color(display-p3 .99 .4 .02);
+    --yellow: #FFE302;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+h1[id], h2[id], h3[id], section[id], .anchor-target {
+    scroll-margin-top: var(--navbar-height);
+}
+
