--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #home {
-    min-height: calc(100vh - var(--navbar-height));
+    min-height: calc(100dvh - var(--navbar-height));
     position: relative;
     overflow: hidden;
 }
