--- a/src/index.css
+++ b/src/index.css
@@ -164,7 +164,7 @@
 :root {
     --navbar-height: 129px;
     --orange: color(display-p3 .99 .4 .02);
-    --yellow: #FFE302;
+    --pink: #e450dc;
 }
 
 html {
